# disk-health-checker

./: .gitignore  BUILD.md  GUI_ARCHITECTURE.md  PROGRESS.md  PUBLISH_CHECKLIST.md  QA_CHECKLIST.md  README.md  RELEASE_NOTES.md  TUTORIAL.md  disk_health_checker_gui.py  disk_health_checker_gui.spec  pyproject.toml
.github/workflows/: ci.yml
assets/: README.md
disk_health_checker/: __init__.py  __main__.py  cli.py
disk_health_checker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
disk_health_checker/checks/: evaluate.py  filesystem.py  integrity.py  smart.py  stress.py  surface.py
disk_health_checker/checks/smart/: __init__.py  ata.py  collector.py  errors.py  normalize.py  nvme.py
disk_health_checker/core/: doctor.py  macos_full.py  runner.py
disk_health_checker/gui/: __init__.py  __main__.py  app.py  main_window.py  theme.py  worker.py
disk_health_checker/gui/widgets/: drive_selector.py  findings_list.py  next_steps_panel.py  verdict_banner.py
disk_health_checker/models/: config.py  results.py  smart_types.py
disk_health_checker/utils/: disks.py  io.py  logging.py  platform.py  progress.py  validation.py
disk_health_checker/verdict/: __init__.py  engine.py  types.py
docs/: setup-guide.html
tests/: test_cli.py  test_collector.py  test_evaluate.py  test_evaluate_ata.py  test_evaluate_nvme.py  test_global_verdict.py  test_linux_disks.py  test_normalize_ata.py  test_normalize_nvme.py  test_output_format.py  test_runner.py  test_smart_scoring.py  test_smart_types.py  test_unified_checks.py  test_usb_bridge.py  test_validation.py
tests/fixtures/smartctl/: README.md  ata_failing.synthetic.json  ata_healthy.synthetic.json  ata_udma_crc.synthetic.json  ata_warning.synthetic.json  nvme_critical_warning.synthetic.json  (+3 more)
validation_runs/2026-04-10-my-book-6tb/: 01-diskutil-volume.txt  02-diskutil-parent-disk.txt  03-system-profiler-usb.txt  04-smartctl-attempts.txt  05-smart-check.json  06-filesystem-check.json  07-full-workflow.json  08-detect.txt  NOTES.md  SUMMARY.md
