[project]
name = "disk-health-checker"
version = "0.2.0"
description = "CLI tool to assess the health of recently formatted disks (SMART, filesystem, surface, stress, integrity)."
authors = [
  { name = "Disk Health Checker", email = "noreply@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["disk", "storage", "health", "SMART", "filesystem", "stress-test"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS",
  "Topic :: System :: Systems Administration",
  "Topic :: System :: Hardware"
]

dependencies = []

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
dev = ["pytest>=8"]

[project.scripts]
disk-health-checker = "disk_health_checker.cli:main"

[project.gui-scripts]
disk-health-checker-gui = "disk_health_checker.gui.app:main"

[tool.setuptools.packages.find]
include = ["disk_health_checker*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

